high on code w/functions

--- a/HW/instaClone.html
+++ b/HW/instaClone.html
@@ -25,11 +25,11 @@
     </style>
   </head>
   <body>
-    <div class="jumbotron <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-3">InstaDoge</h1>
         </div>
-    </div>"></div>
+    </di>"></div>
     <div class="container">
       <div class="row">
         <div class="col">
