--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -11,15 +11,15 @@
     <div id="table">
       <div id="messages"></div>
 
-      <label style="font-size: 20px;">Dealer: </label>
+      <label style="font-size: 20px;color: white;">Dealer: </label>
 
-      <label id="dealer-points" class="points"></label>
+      <label id="dealer-points" class="points" style="color: white;"></label>
 
       <div id="dealer-hand" class="hand"></div>
 
-      <label style="font-size: 20px;">Player: </label>
+      <label style="font-size: 20px; color: white;">Player: </label>
 
-      <label id="player-points" class="points"></label>
+      <label id="player-points" class="points" style="color: white;"></label>
 
       <div id="player-hand" class="hand"></div>
 
