--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -30,6 +30,21 @@
 
         <button id="stand-button">Stand</button>
       </div>
+      <div class="buttons">
+        <div class="bets">
+          <label style="color: white;">Bet Amount:</label>
+
+          <label id="bet-amount" class="bet" style="color: white;"></label>
+
+          <label style="color: white;">Player Money:</label>
+
+          <label id="money-amount" class="money" style="color: white;"></label>
+        </div>
+
+        <button class="up10">+ $10</button>
+
+        <button class="down10">- $10</button>
+      </div>
     </div>
     <script src="blackjack.js"></script>
   </body>
