--- a/learning/reduceFunc/index.html
+++ b/learning/reduceFunc/index.html
@@ -6,8 +6,10 @@
     <title>Page</title>
   </head>
   <body>
-    <div id="demo">Hello World</div>
-    <div id="fizzbuzz"></div>
+    <!-- <div id="demo">Hello World</div>
+    <div id="fizzbuzz"></div> -->
+
+    <div class="mainContent"></div>
 
     <script src="./script.js"></script>
   </body>
